# CheckPeq

./: .gitignore  ANALISE_REQUIREMENTS.md  APLICAR_CORRECOES_RAILWAY.bat  COMO_USAR.txt  COMPARACAO_REQUIREMENTS.md  CONFIGURAR_API.bat  CORRIGIR_RAILWAY_COMPLETO.bat  CORRIGIR_RAPIDO.bat  DEPLOY_RAILWAY_ALTERNATIVO.bat  DEPLOY_RAPIDO.bat  DIAGNOSTICO.bat  Dockerfile  EXECUTAR.bat  FIX_RAILWAY_DEPLOY.bat  GUIA_RAILWAY_COMPLETO.md  INSTALAR.bat  Personal  Procfile  RAILWAY_RESUMO_RAPIDO.txt  README.md  RESUMO_MELHORIAS.md  SUBIR_GIT_RAILWAY.bat  TESTAR_SIMPLES.bat  TESTAR_SISTEMA.bat  TROUBLESHOOTING.md  docker-compose.yml  env.example  nixpacks.toml  pyproject.toml  railway.json  requirements-railway.txt  requirements.txt
.streamlit/: secrets.toml
docs/: ANALISE_COMERCIAL.md  Check List - Pesquisa de Preços.md  DEPLOY_ONLINE_COMPLETO.md  GUIA_TESTE_LOCAL.md  INSTALACAO.md  MELHORIAS_IMPLEMENTADAS.md  PROXIMOS_PASSOS.md  README.md  RELATORIO_MELHORIAS.md  RESUMO_EXECUTIVO.md  SISTEMA_COMPLETO.md  TESTES_REALIZADOS.md  VALOR_REALISTA.md  VALOR_RESUMIDO.md  deploy_rapido.md  deploy_web.md
scripts/: run_flask.bat  run_streamlit.bat  test_install.py  testar_sistema.bat  teste_completo.py
src/: app.py  app_flask.py  app_simple.py  checklist_items.json  config.py  security.py  utils.py
tests/: __init__.py
tests/unit/: test_security.py
